contact page text alignment set justified - using span element, paragraph element text-justification : inter-word not responding: still need to find bug for this. margin of button on contact form change.

--- a/css/others.css
+++ b/css/others.css
@@ -26,10 +26,16 @@
   padding-top: 3rem;
 }
 
-.about-paragraph {
+.my-about-text-wrapper {
   text-align: justify;
   text-justify: inter-word;
   text-align-last: left;
+}
+
+.about-paragraph {
+  /* text-align: justify;
+  text-justify: inter-word;
+  text-align-last: left; */
   padding-bottom: 1rem;
 }
 
@@ -95,7 +101,7 @@
 }
 
 .contact-buttons button {
-  margin: 2rem auto;
+  margin: 2rem 0;
 }
 
 /* ======================================================================== Login Page */
